# ci-cd-playground

./: README.md  log.txt  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  update-game.yaml  update-game.yml
src/ci_cd_playground/: main.py
tests/: test_main.py
