[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-cd-playground"
version = "0.1.0"
description = "Learning CI/CD with GitHub Actions"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff"
]
build = ["build"]

[tool.setuptools.packages.find]
where = ["src"]
